--- a/assets/main.css
+++ b/assets/main.css
@@ -47,6 +47,9 @@ h1{font-size:2.67em;}
 h2{font-size:2.00em;}
 h3{font-size:1.67em;}
 h4{font-size:1.33em;}
+H5{ font-size: .83em; line-height: 1.17em; margin: 1.67em 0 }
+H6{ font-size: .67em; margin: 2.33em 0 }
+
 p{list-style:none; margin:24px auto 24px auto; padding:0px; width:900px; text-align:left;}
 li a, p a {text-decoration:underline; text-decoration-color:#b8860b;}
 ul{list-style:none; margin:24px auto 24px auto; padding:0px; width:800px; text-align:left;}
